@@ -893,3 +893,4 @@ void MerkaartorPreferences::setRecentImport(const QStringList & theValue)
 M_PARAM_IMPLEMENT_BOOL(GpsSaveLog, gps, false)
 M_PARAM_IMPLEMENT_BOOL(GpsMapCenter, gps, false)
 M_PARAM_IMPLEMENT_STRING(GpsLogDir, gps, "")
+M_PARAM_IMPLEMENT_BOOL(ResolveRelations, downloadosm, false)
